--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
  
         <!-- ここに記述していきましょう！ -->
  
-         <div class="timeCount">00:00:00</div>
+         <div class="timeCount">00:00:000</div>
              <div>
-             <button type="button" id="start" onclick="startTimer()">スタート</button>
-             <button type="button" id="stop" onclick="stopTimer()" disabled>ストップ</button>
-             <button type="button" id="reset" onclick="resetTimer()" disabled>リセット</button>
+             <button class="start" onclick="startTimer()">スタート</button>
+             <button class="stop" onclick="stopTimer()" disabled>ストップ</button>
+             <button class="reset" onclick="resetTimer()" disabled>リセット</button>
              
          </div>
          
